# humanoid-book

./: .gitignore  .npmignore  AUTH_PERSONALIZATION_SETUP.md  RAG_SETUP.md  README.md  URDU_TRANSLATION_FEATURE.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js  vercel.json
.github/workflows/: deploy.yml
api/: analytics.js  content-indexer.js  feedback.js  health.js  index-content.js  rag.js  retrieve.js
content/: intro.md
content/diagrams/: agent-controller-flow.txt  full-architecture.txt  humanoid-communication.txt  humanoid-urdf-structure.txt  pubsub-flow.txt  ros2-architecture.txt  summary-diagram.txt
content/examples/: README.md  test_agent_controller.py  test_full_nervous_system.py  test_publisher_subscriber.py
content/examples/controller/: agent_controller_demo.py  agent_publisher.py  controller_subscriber.py
content/examples/publisher/: detailed_publisher.py  (+2 more)
content/module-1/: data-flow-middleware.md  intro.md  nodes-topics-services.md  putting-it-together.md  python-agent-bridge.md  troubleshooting.md  urdf-humanoid-structure.md
content/module-2/: environment-building.md  intro.md  physics-simulation.md  sensor-emulation.md  troubleshooting.md  unity-visualization.md
content/module-3/: intro.md  isaac-ros-integration.md  nav2-bipedal-navigation.md  nvidia-isaac-sim.md  synthetic-data-generation.md  training-and-transfer.md  troubleshooting.md
content/module-4/: capstone-project.md  cognitive-planning.md  intro.md  troubleshooting.md  vla-integration.md  voice-to-action.md
docs/about/: chatbot-configuration.md  using-chatbot.md
docs/module-1/: data-flow-middleware.md  intro.md  nodes-topics-services.md  putting-it-together.md  python-agent-bridge.md  troubleshooting.md  urdf-humanoid-structure.md
docs/module-2/: environment-building.md  intro.md  physics-simulation.md  sensor-emulation.md  troubleshooting.md  unity-visualization.md
docs/module-3/: intro.md  isaac-ros-integration.md  nav2-bipedal-navigation.md  nvidia-isaac-sim.md  synthetic-data-generation.md  training-and-transfer.md  troubleshooting.md
docs/module-4/: capstone-project.md  cognitive-planning.md  intro.md  troubleshooting.md  vla-integration.md  voice-to-action.md
docs/setup-guides/: asset-optimization.md  digital-twin-setup.md  performance-optimization.md  physics-setup.md  quickstart_validation.md  sensor-simulation.md  speed-insights-getting-started.md  synchronization.md  unity-visualization.md
docs/tutorials/: physics-validation.ipynb  sensor-validation.ipynb  unity-interaction.ipynb
server/: indexer.js  package-lock.json  package.json  pinecone-retriever.js  server.js
server/routes/: userRoutes.js
simulation/ros2/src/isaac_ros_pkgs/: CMakeLists.txt  README.md  package.xml  vslam_config.yaml
simulation/ros2/src/isaac_ros_pkgs/docs/: technical_documentation.md  user_guide.md
simulation/ros2/src/isaac_ros_pkgs/launch/: bipedal_ai_brain.launch.xml
simulation/ros2/src/sensor_simulator/: CMakeLists.txt  package.xml
simulation/ros2/src/sensor_simulator/msg/: StateSync.msg  StateSynchronization.msg
simulation/ros2/src/sensor_simulator/src/: depth_noise_model.cpp  imu_noise_model.cpp  lidar_noise_model.cpp  sensor_publisher.py  transform_sync.cpp
simulation/ros2/src/sensor_simulator/test/: physics_validation.py  sensor_validation.py  sync_validation.py
specs/1-humanoid-ros2-nervous-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/2-digital-twin-simulation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/3-ai-robot-brain-nvidia-isaac/: plan.md  spec.md  tasks.md
specs/sp.plan-complete-course/: plan.md  tasks.md
specs/sp.specify-complete-course/: spec.md
src/context/: AuthContext.js
src/css/: custom.css
src/lib/: auth.js  translationUtils.js
src/pages/: index.module.css  index.tsx
src/theme/: Root.js
static/examples/: test_agent_controller.py  test_full_nervous_system.py  test_publisher_subscriber.py
(+67 files in other folders)
