<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_pkgs</name>
  <version>0.1.0</version>
  <description>AI-Robot Brain package using NVIDIA Isaac technologies</description>
  <maintainer email="maintainer@humanoid-robot.com">Humanoid Robot Team</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/panaversity/humanoid-book</url>
  <author email="author@humanoid-robot.com">Humanoid Robot Team</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_common</depend>
  <depend>nav2_msgs</depend>
  <depend>isaac_ros_visual_slam</depend>
  <depend>isaac_ros_stereo_image_proc</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>